Was added authorization to managing medical records
